--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ description = "Get Pokémon names"
 rustc-serialize = "0.3.22"
 csv = "0.14"
 rand = "0.3"
+serde = "1.0.197"
+serde_json = "1.0.115"
