--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "pokemon"
 version = "1.0.0"
+edition = "2021"
 authors = ["Emma Ramirez <ramirez.emma.g@gmail.com>"]
-# respository = "https://github.com/EmmaRamirez/pokemon.git"
-homepage = "https://github.com/EmmaRamirez/pokemon.git"
+# respository = "https://github.com/emzinnia/pokemon.git"
+homepage = "https://github.com/emzinnia/pokemon.git"
 license = "MIT"
 readme = "README.md"
-documentation = "https://github.com/EmmaRamirez/pokemon"
+documentation = "https://github.com/emzinnia/pokemon"
 description = "Get Pokémon names"
 
 [dependencies]
-rustc-serialize = "0.3.22"
-csv = "0.14"
-rand = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+csv = "1.3"
+rand = "0.8"
